# rust_slint_todos

./: Cargo.toml  README.md  build.rs  todos.yml
src/: main.rs  todo.rs
ui/: MainWin.slint
