[package]
name = "todo_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive", ] }
serde_json = "1.0.116"
serde_yaml = "0.9.33"
slint = "1.5.1"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "serde",
]

[build-dependencies]
slint-build = "1.5.1"