[package]
name = "zl_todos"
version = "0.1.3"
edition = "2021"
authors = ["Zilong Yang <ziong.yang@gmail.com>"]
license = "MIT"
description = "A simple todo list application written in Rust"
readme = "README.md"
homepage = "https://github.com/ZilongYang/rust_slint_todos"
repository = "https://github.com/ZilongYang/rust_slint_todos"
keywords = ["zl", "rust", "todos", "slint", "demo"]
categories = ["development-tools", "utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive", ] }
serde_json = "1.0.116"
serde_yaml = "0.9.33"
slint = "1.5.1"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "serde",
]

[build-dependencies]
slint-build = "1.5.1"